completing all module with dummy data

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ganjarramadhan.bookdoctor">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".BookDoctorApplication"
         android:allowBackup="true"
@@ -19,7 +21,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".module.dashboard.view.Dashboard" />
+        <activity
+            android:name=".module.dashboard.view.Dashboard"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".module.login.view.Login"
             android:label="@string/title_activity_login"
