--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 23
@@ -36,5 +37,6 @@ dependencies {
     compile 'com.github.silvestrpredko:dot-progress-bar:0.1.4@aar'
     compile 'com.android.support:design:23.3.0'
     compile 'org.parceler:parceler-api:1.0.4'
+    apt "org.parceler:parceler:1.0.4"
     compile 'de.hdodenhof:circleimageview:2.0.0'
 }
