--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,9 @@ dependencies {
     compile 'com.github.silvestrpredko:dot-progress-bar:0.1.4@aar'
     compile 'com.android.support:design:23.3.0'
     compile 'org.parceler:parceler-api:1.0.4'
-    apt "org.parceler:parceler:1.0.4"
+    apt 'org.parceler:parceler:1.0.4'
     compile 'de.hdodenhof:circleimageview:2.0.0'
+    compile 'com.wdullaer:materialdatetimepicker:2.3.0'
+    compile 'com.scottyab:secure-preferences-lib:0.1.4'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
 }
